--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,15 @@
   <head>
     <title> {{ page.title }} </title>
     <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+    <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen" title="no title" charset="utf-8" />
   </head>
 
   <body>
-    <h1><a href="/"> Roshan's Blog </a></h1>
-    {{ content }}
+    <div class="container">
+      <div class="header">
+        {% include header.html %}
+      </div>
+      {{ content }}
+    </div>
   </body>
 </html>
