--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,8 @@
-<h1><a href="/"> Roshan Choxi </a></h1>
+<h1>
+  <a href="/"> Roshan Choxi </a>
+</h1>
+
+<ul class="social_links">
+  <li> <a href="http://twitter.com/choxi">twitter</a> |</li>
+  <li> <a href="http://github.com/choxi">github</a></li>
+</ul>
