--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
       <div class="header">
         {% include header.html %}
       </div>
-      {{ content }}
+      <div class="main">
+        {{ content }}
+      </div>
     </div>
   </body>
 </html>
