--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <a href="/"> Roshan Choxi </a>
 </h1>
 
-<ul class="social_links">
+<ul id="social_links">
   <li> <a href="http://twitter.com/choxi">twitter</a> |</li>
   <li> <a href="http://github.com/choxi">github</a></li>
 </ul>
