--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,11 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="header">
+    <div id="container">
+      <div id="header">
         {% include header.html %}
       </div>
-      <div class="main">
+      <div id="content">
         {{ content }}
       </div>
     </div>
