--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
     <title> {{ page.title }} </title>
     <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+    {% include analytics.html %}
   </head>
 
   <body>
