--- a/sass/main.sass
+++ b/sass/main.sass
@@ -10,6 +10,7 @@ $color2: #3366FF
 $light_grey: #222
 
 
+// Layout definition
 body
   font-family: Melbourne
 
@@ -24,6 +25,12 @@ h1
   font-family: "Ubuntu-Title", "Helvetica Neue", "Helvetica", "arial", "sans-serif"j
   font-size: 40px
   text-transform: lowercase
+
+pre
+  font-family: arial
+  border: 1px solid black
+  padding: 10px
+  margin: 10px 0
 
 #container
   width: $width
