--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,13 @@
   <a href="/"> Roshan Choxi </a>
 </h1>
 
+<p id="about_me">
+ I'm a Chicago-based engineer <br /> 
+ who rants about startups
+</p>
+
 <ul id="social_links">
   <li> <a href="http://twitter.com/choxi">twitter</a> |</li>
   <li> <a href="http://github.com/choxi">github</a></li>
 </ul>
+
