--- a/sass/main.sass
+++ b/sass/main.sass
@@ -12,7 +12,7 @@ $light_grey: #B5B5B5
 
 // Layout definition
 html, body
-  font-family: Arial
+  font-family: Helvetica Neue, Helvetica, Arial
   width: 100% 
 
 a
@@ -47,9 +47,12 @@ h1
 #header
   margin-top: 8px
   margin-bottom: 50px
+  h1
+    float: left
   #social_links
     list-style: none
     @extend .secondary_font
+    clear: both
     li
       font-size: 20px
       display: inline
@@ -58,6 +61,13 @@ h1
         -webkit-transition: color .30s ease-in
         &:hover
           color: $color2
+  #about_me
+    float: right
+    width: 300px
+    text-align: right
+    margin-top: 10px
+    font-size: 14px
+    font-style: italic
 .post
   padding: 10px 0 80px 0
   border-top: 1px solid black
