--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -5,8 +5,8 @@
     var disqus_developer = 1;
 
     // The following are highly recommended additional parameters. Remove the slashes in front to use.
-    // var disqus_identifier = 'unique_dynamic_id_1234';
-    // var disqus_url = 'http://example.com/permalink-to-page.html';
+    var disqus_identifier = '{{ page.post_id }}';
+    var disqus_url = '{{ page.url }}';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
