disqus_developer off

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 </h1>
 
 <p id="about_me">
- I'm a Chicago-based engineer <br /> 
+ A Chicago-based engineer <br /> 
  who rants about startups
 </p>
 
