--- a/css/fonts.css
+++ b/css/fonts.css
@@ -22,3 +22,7 @@
 @font-face {
   font-family: Capture-it-2;
   src: url("/fonts/Capture-it-2.ttf"); }
+
+@font-face {
+  font-family: Museo Slab;
+  src: url("/fonts/Museo_Slab_500.otf"); }
