--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -17,3 +17,6 @@
 @font-face
   font-family: Capture-it-2
   src: url('/fonts/Capture-it-2.ttf')
+@font-face
+  font-family: Museo Slab
+  src: url('/fonts/Museo_Slab_500.otf')
