--- a/sass/main.sass
+++ b/sass/main.sass
@@ -43,7 +43,7 @@ h1
 // Structure Related CSS
 #container
   width: $width
-  margin: auto
+  margin: 150px auto
 
 #header
   margin-top: 8px
@@ -78,6 +78,8 @@ h1
     .graphic
       width: 360px
       height: 258px
+      box-shadow: 0px 10px 20px #000
+      -webkit-box-shadow: 0px 10px 20px #000 
   #groupon
     margin-right: 38px
     margin-left: 24px
