--- a/sass/main.sass
+++ b/sass/main.sass
@@ -104,6 +104,21 @@ h1
     font-size: 20px
     text-decoration: underline
 
+#sxsw
+  text-align: center
+  font-size: 20px
+  margin-bottom: 48px
+
+.pretty
+  a
+    font-family: Museo Slab
+    color: $color3
+    font-size: 30px
+    text-shadow: #C8D885 0px 1px 1px
+    &:hover
+      color: lighten($color3, 10)
+
+
 .post
   padding: 10px 0 70px 0
   border-top: 1px solid black
