--- a/sass/main.sass
+++ b/sass/main.sass
@@ -48,7 +48,6 @@ h1
 
 #header
   margin-top: 8px
-  margin-bottom: 50px
   text-align: center
   #social_links
     list-style: none
@@ -64,12 +63,11 @@ h1
           color: $color2
 #projects
   width: 100%
-  height: 360px
-  #groupon, #mergefm
-    float: left
-    width: 360px
+  .project
     height: 300px
     .caption
+      width: $width/2
+      float: right
       text-align: center
       margin-bottom: 10px
       font-family: Museo Slab
@@ -79,35 +77,39 @@ h1
         text-shadow: #C8D885 0px 1px 1px
         &:hover
           color: lighten($color3, 10)
+    a
+      width: 360px
     .graphic
+      float: left
       width: 360px
       height: 258px
       box-shadow: 0px 10px 20px #000
       -webkit-box-shadow: 0px 10px 20px #000 
-  #groupon
-    margin-right: 38px
-    margin-left: 24px
   #groupon .graphic
-    background-image: url("/images/groupon_desat.png")
+    background: url("/images/groupon_sprite.png") 0px 258px
     &:hover
-      background-image: url("/images/groupon.png")
+      background: url("/images/groupon_sprite.png") 0px 0px
   #mergefm .graphic
-    background-image: url("/images/mergefm_desat.png")
+    background: url("/images/mergefm_sprite.png") 0px 258px
     &:hover
-      background-image: url("/images/mergefm.png")
+      background: url("/images/mergefm_sprite.png") 0px 0px
+  #shotput .graphic
+    background: url("/images/shotput_sprite.png") 0px 258px
+    &:hover
+      background: url("/images/shotput_sprite.png") 0px 0px
+  #bloc .graphic
+    background: url("/images/bloc_sprite.png") 0px 258px
+    &:hover
+      background: url("/images/bloc_sprite.png") 0px 0px
 
 #follow_me
   font-size: 18px
   text-align: center
+  margin-bottom: 30px
   a
     font-family: Museo Slab
     font-size: 20px
     text-decoration: underline
-
-#sxsw
-  text-align: center
-  font-size: 20px
-  margin-bottom: 48px
 
 .pretty
   a
