--- a/sass/main.sass
+++ b/sass/main.sass
@@ -85,6 +85,10 @@ h1
       height: 258px
       box-shadow: 0px 10px 20px #000
       -webkit-box-shadow: 0px 10px 20px #000 
+  #niroka .graphic
+    background: url("/images/niroka_sprite.png") 0px 258px
+    &:hover
+      background: url("/images/niroka_sprite.png") 0px 0px
   #groupon .graphic
     background: url("/images/groupon_sprite.png") 0px 258px
     &:hover
