--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,11 @@
   <body>
     <div id="container">
       <div id="header">
+        <a href="/"><h1> Roshan Choxi </h1></a>
+        <a href="http://twitter.com/choxi"><img src="/images/twitter.png"></a>
+        <a href="http://github.com/choxi"><img src="/images/github.png"></a>
+        <a href="/blog.html"><img src="/images/blog.png"></a>
+        <div class="clear"></div>
       </div>
       <div id="content">
         {{ content }}
