--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,8 @@
 ---
   layout: default
-  post_id: 1
 ---
 
 <div class="post">
-  {{ content | truncatewords: 500}}
+  {{ content }}
 </div>
 {% include disqus.html %}
