--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@
     <div id="container">
       <div id="header">
         <a href="/"><h1> Roshan Choxi </h1></a>
-        <a href="http://twitter.com/choxi"><img src="/images/twitter.png"></a>
-        <a href="http://github.com/choxi"><img src="/images/github.png"></a>
-        <a href="/blog.html"><img src="/images/blog.png"></a>
+        <a href="http://twitter.com/choxi"><div class="navigation twitter"></div></a>
+        <a href="http://github.com/choxi"><div class="navigation github"></div></a>
+        <a href="/blog.html"><div class="navigation blog"></div></a>
         <div class="clear"></div>
       </div>
       <div id="content">
