--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container">
       <div id="header">
-        <a href="/"><h1> Roshan Choxi </h1></a>
+        <h1><a href="/">Roshan Choxi</a></h1>
         <a href="http://twitter.com/choxi"><div class="navigation twitter"></div></a>
         <a href="http://github.com/choxi"><div class="navigation github"></div></a>
         <a href="/blog.html"><div class="navigation blog"></div></a>
