--- a/sass/main.sass
+++ b/sass/main.sass
@@ -42,6 +42,8 @@ h1
 #header h1
   font-size: 42px
   float: left
+  &:hover
+    color: lighten($highlight_1, 10)
 
 .highlight
   font-family: Arial
