--- a/sass/main.sass
+++ b/sass/main.sass
@@ -131,6 +131,8 @@ h1
 
 .post
   padding: 10px 0 70px 0
+  text-shadow: white 1px 1px 0
+  font-size: 16px
   .title
     font-weight: bold
     color: $highlight_1
