--- a/sass/main.sass
+++ b/sass/main.sass
@@ -128,11 +128,16 @@ h1
 .posts
   font-size: 24px
   text-align: center
+  a
+    color: $highlight_2
 
 .post
   padding: 10px 0 70px 0
   text-shadow: white 1px 1px 0
   font-size: 16px
+  h1
+    color: $highlight_2
+    text-transform: none
   .title
     font-weight: bold
     color: $highlight_1
@@ -185,6 +190,10 @@ h3
     text-transform: lowercase
     bottom: -35px
     left: 72px
+    color: $highlight_2
+  &:hover
+    p
+      color: lighten($highlight_2, 10)
 
 #header
   margin-bottom: 40px
