--- a/sass/main.sass
+++ b/sass/main.sass
@@ -135,9 +135,13 @@ h1
   padding: 10px 0 70px 0
   text-shadow: white 1px 1px 0
   font-size: 16px
+  img
+    display: block
+    margin: 0 auto
   h1
     color: $highlight_2
     text-transform: none
+    text-align: center
   .title
     font-weight: bold
     color: $highlight_1
