change highlight color

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -219,3 +219,8 @@ h3
       background: url("/images/github.png") no-repeat
       &:hover
         background: url("/images/github.png") 0 48px
+
+::selection
+  background: lighten($highlight_3, 10)
+  color: white
+  text-shadow: none
