--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> {{ page.title }} </title>
+    <title> {{ page.title }} | roshfu </title>
     <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <meta name="google-site-verification" content="WoRj5726Vv0IX8yt_vGrUrYRLHqPshAOhYbGZ36ND3o" />
