The Afterlife of a Whale

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -136,6 +136,8 @@ h1
   text-align: center
   a
     color: $highlight_2
+  li
+    margin: 10px 0
 
 .post
   padding: 10px 0 70px 0
@@ -144,16 +146,20 @@ h1
   img
     display: block
     margin: 0 auto
+    border: 10px solid rgba(120,120,120, 0.6)
+  h1, h4
+    text-align: center
   h1
     color: $highlight_2
     text-transform: none
-    text-align: center
   .title
     font-weight: bold
     color: $highlight_1
     font-size: 36px
     margin-bottom: 25px
     @extend .secondary_font
+  a
+    text-shadow: none
 
 .clear
   clear: both
