Why We Do What We Do

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -272,3 +272,15 @@ strong
 
 li
   margin: 5px 0
+
+ul
+  list-style: disc
+  margin-left: 2em
+  &.posts
+    list-style: none
+ol
+  list-style: decimal
+  margin-left: 2em
+
+h4
+  margin-bottom: 20px
