--- a/sass/main.sass
+++ b/sass/main.sass
@@ -31,9 +31,15 @@ p
 a
   text-decoration: none
   font-weight: bold
-  color: $highlight_1
+  color: $highlight_2
   &:hover
-    color: lighten($highlight_1, 10)
+    color: lighten($highlight_2, 10)
+
+#footer a
+  color:  lighten($highlight_2, 10)
+  text-shadow: none
+  &:hover
+    color: lighten($highlight_2, 20)
 
 .primary_font
   font-family: Museo Slab, Helvetica Neue, Helvetica, arial, sans-serif
@@ -150,7 +156,7 @@ h1
   h1, h4
     text-align: center
   h1
-    color: $highlight_2
+    color: $highlight_1
     text-transform: none
   .title
     font-weight: bold
