--- a/sass/main.sass
+++ b/sass/main.sass
@@ -58,10 +58,11 @@ h1
     color: lighten($highlight_1, 10)
 
 .highlight
-  font-family: Arial
+  font-family: Monaco, monospace
   border: 1px solid $light_grey
-  padding: 10px
+  padding: 20px
   margin: 10px 0
+  text-shadow: none
 
 // Structure Related CSS
 .container
