Use Highlight 1 For Blog Posts List

--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ h1 {
   font-size: 24px;
   text-align: center; }
   .posts a {
-    color: #b92835; }
+    color: #3b3f3f; }
   .posts li {
     margin: 10px 0; }
 
