--- a/css/main.css
+++ b/css/main.css
@@ -191,6 +191,10 @@ h1 {
   padding: 10px 0 70px 0;
   font-size: 16px;
   color: #3b3f3f; }
+  .post .caption {
+    text-align: center;
+    margin-top: -18px;
+    font-size: 14px; }
   .post img {
     display: block;
     margin: 0 auto;
