--- a/sass/main.sass
+++ b/sass/main.sass
@@ -147,6 +147,10 @@ h1
   padding: 10px 0 70px 0
   font-size: 16px
   color: $highlight_1
+  .caption
+    text-align: center
+    margin-top: -18px
+    font-size: 14px
   img
     display: block
     margin: 0 auto
